[gd_scene load_steps=2 format=3 uid="uid://dkru5vls84s76"]

[ext_resource type="Script" uid="uid://5l5iixmd5pcd" path="res://dev_workspaces/djreprincess/player_attack.gd" id="1_rc6xn"]

[node name="playerAttack" type="Node2D"]
scale = Vector2(1.8, 1.8)
script = ExtResource("1_rc6xn")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(8.999999, -0.19999999)
collision_mask = 4

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-8.999999, 0.19999999)
collision_mask = 4

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 9.999999)
collision_mask = 4

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(-0.19999999, -9.4)
collision_mask = 4

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
